2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use Standard C syntax for function definitions.

	* ci.c: Throughout, use Standard C syntax for function definitions.
	* co.c: Likewise.
	* ident.c: Likewise.
	* maketime.c: Likewise.
	* merge.c: Likewise.
	* merger.c: Likewise.
	* partime.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsedit.c: Likewise.
	* rcsfcmp.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcskeys.c: Likewise.
	* rcslex.c: Likewise.
	* rcsmerge.c: Likewise.
	* rcsrev.c: Likewise.
	* rcssyn.c: Likewise.
	* rcstime.c: Likewise.
	* rcsutil.c: Likewise.
	* rlog.c: Likewise.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ANSI prototypes.

	Abbreviations:
	D: "Don't use `P (PROTOTYPE)', just use PROTOTYPE directly."
	P: "For #if has_prototypes FOO #else BAR #endif blocks,
	replace block with simply FOO."

	* maketime.h (__MAKETIME_P): Delete macro;
	update callers to use its arg directly.
	* partime.h (__PARTIME_P): Likewise.
	* ci.c: D; P.
	* co.c: D.
	* ident.c: D.
	* maketime.c: D.
	* merge.c: D.
	* merger.c: D.
	* partime.c: D.
	* rcs.c: D.
	* rcsbase.h: D.
	* rcsclean.c: D.
	* rcsdiff.c: D.
	* rcsedit.c: D; P.
	* rcsfcmp.c: D.
	* rcsfnms.c: D.
	* rcsgen.c: D; P.
	* rcskeep.c: D.
	* rcslex.c: D; P.
	* rcsrev.c: D.
	* rcssyn.c: D.
	* rcstime.c: D.
	* rcsutil.c: D; P.
	* rlog.c: D.
	* conf.sh: Don't compute `has_prototypes' or `P'.
	Also fix buglet: Use `$ech' instead of `echo'.

2010-02-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move authoritative version number into configure.in.

	* rcsbase.h: #include "auto-sussed.h".
	(RCS_version_string): Delete decl.
	(COMMAND_VERSION): New #define.
	* ident.c (main): Use `COMMAND_VERSION'.
	* merge.c (main): Likewise.
	* rcsutil.c (setRCSversion): Likewise.
	* Makefile.in (SOURCE): Remove version.c.
	(ci, co, ident, merge, rlog, rcs, rcsclean)
	(rcsdiff, rcsmerge, OBJECT): Remove `version$o'.