@@ -428,7 +428,7 @@ copystring (void)
  * Assumption: next character read is first string character.
  */
 {
-  register c;
+  register int c;
   declarecache;
   register FILE *frew, *fcop;
   register int amidline;
@@ -692,7 +692,7 @@ expandline (RILE *infile, FILE *outfile, struct hshentry const *delta,
  * 2 if a complete line is copied; adds 1 to yield if expansion occurred.
  */
 {
-  register c;
+  register int c;
   declarecache;
   register FILE *out, *frew;
   register char *tp;
