@@ -634,7 +634,7 @@ getauthor (char *argv)
 /*              and store in authorlist                   */
 
 {
-  register c;
+  register int c;
   struct authors *newauthor;
 
   argv--;
